--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,38 @@
-body{
-    background-color: pink;
+body {
+    background-color: white;
+}
+
+.header--image {
+    max-width: 200px;
+
+}
+
+.navbar{
+    /* Rectangle 11 */
+
+position: absolute;
+width: 1488px;
+height: 120px;
+left: 12px;
+
+background: #F5B4B1;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 25px;
+
+}
+
+.int--body{
+    /* Rectangle 12 */
+
+position: absolute;
+width: 1488px;
+height: 744px;
+left: 14px;
+top: 135px;
+
+background: #D8D0F0;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 39px;
+
+
 }
