--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,42 @@ border-radius: 39px;
 
 
 }
+
+.int--section{
+    /* Rectangle 13 */
+position: absolute;
+width: 1424px;
+height: 92px;
+left: 20px;
+top: 25px;
+
+background: rgba(217, 217, 217, 0.04);
+border-bottom: 1px solid #5336AA;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+
+}
+
+.int--text{
+    /* Q1 = What is your favorite hobby? */
+
+position: absolute;
+width: 1405px;
+height: 89px;
+left: 44px;
+top: 274px;
+
+font-family: 'Nunito';
+font-style: normal;
+font-weight: 500;
+font-size: 32px;
+line-height: 44px;
+display: flex;
+align-items: center;
+letter-spacing: 0.2px;
+
+color: #000000;
+
+
+
+}
