--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
 
 .header--image {
     max-width: 200px;
+    margin-top: 10px;
 
 }
 
@@ -52,14 +53,14 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 }
 
-.int--text{
+.int--question{
     /* Q1 = What is your favorite hobby? */
 
 position: absolute;
 width: 1405px;
-height: 89px;
-left: 44px;
-top: 274px;
+height: 10px;
+left: 10px;
+top: 10;
 
 font-family: 'Nunito';
 font-style: normal;
@@ -75,3 +76,92 @@ color: #000000;
 
 
 }
+
+.int--text{
+    /* Speech to text conversion */
+position: absolute;
+width: 1418px;
+height: 73px;
+left: 42px;
+top: 35px;
+
+font-family: 'Nunito';
+font-style: italic;
+font-weight: 400;
+font-size: 32px;
+line-height: 44px;
+display: flex;
+align-items: center;
+letter-spacing: 0.2px;
+
+color: #000000;
+
+
+}
+
+.start--btn{
+    /* button/false */
+
+/* Auto layout */
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 2px;
+
+position: absolute;
+width: 205px;
+height: 84px;
+left: 644px;
+top: 748px;
+
+
+
+/* Button */
+
+box-sizing: border-box;
+
+/* Auto layout */
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 16px 18px;
+gap: 10px;
+
+width: 168px;
+height: 76px;
+
+background: #FFFFFF;
+border: 2px solid #000000;
+box-shadow: -4px 4px 0px #000000;
+
+/* Inside auto layout */
+flex: none;
+order: 0;
+flex-grow: 0;
+
+
+/* Sign up */
+
+width: 90px;
+height: 30px;
+
+font-family: 'Source Code Pro';
+font-style: normal;
+font-weight: 600;
+font-size: 30px;
+line-height: 100%;
+/* identical to box height, or 30px */
+
+color: #000000;
+
+
+/* Inside auto layout */
+flex: none;
+order: 0;
+flex-grow: 0;
+
+
+}
+
