--- a/src/index.css
+++ b/src/index.css
@@ -38,17 +38,23 @@ border-radius: 39px;
 
 }
 
+
+.text-input{
+    /* Rectangle 13 */
+position: absolute;
+width: 1440px;
+height: 300px;
+
+top: 300px;}
+
 .int--section{
     /* Rectangle 13 */
 position: absolute;
 width: 1424px;
 height: 92px;
 left: 20px;
-top: 25px;
+top: 75px;
 
-background: rgba(217, 217, 217, 0.04);
-border-bottom: 1px solid #5336AA;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 
 }
